<resources>
    <string name="app_name">Retén Tienda</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="sobre_nosotros">Sobre nosotros</string>
    <string name="sobre_desarrolladores">Sobre desarrolladores</string>
    <string name="contrase_a_incorrecta">Contraseña incorrecta</string>
    <string name="este_campo_no_debe_estar_vac_o">Este campo no debe estar vacío</string>
    <string name="salir">Salir</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="acerca_de_nosotros">Acerca de nosotros</string>
    <string name="el_ret_n">El Retén</string>
    <string name="negocio_particular">Negocio particular</string>
    <string name="_53_58419241">+53 58419241</string>
    <string name="direccion_negocio">Calzada de Luyanó, municipio 10 de Octubre, #727, e/ Concha y Porvenir, La Habana</string>
    <string name="sobre_nosotros1">Sobre nosotros:</string>
    <string name="sobre_nosotros_desc">"Tenga una cordial bienvenida a El Retén, tu tienda de confianza para encontrar las mejores piezas del mercado. Nos especializamos en ofrecer una amplia selección de piezas de alta calidad para todo tipo de motores. En El Retén, nuestra misión es brindar a nuestros clientes un servicio excepcional y un conocimiento experto en dicha industria"</string>
    <string name="qnecesitas">QNecesitas</string>
    <string name="productos_inform_ticos">Productos Informáticos</string>
    <string name="Nuestro_numero">+53 55759386</string>
    <string name="ronnynordelo_gmail_com">ronnynordelo@gmail.com</string>
    <string name="mision_nuestra">El enfoque que buscamos es el de una empresa acogedora, cuyos complicados servicios sean llevados a los clientes de forma fácil de comprender. Cuba es un país poco informatizado por lo que tenemos noción de que la mayoría de nuestros clientes conocen la importancia de llevar su negocio a las redes y la tecnología pero sus conocimientos de aplicaciones y páginas web son pocos o ninguno, así que si ese es su caso no se preocupe, solo tiene que decirnos alguna idea que tenga o la información que quiere informatizar y haremos magia.</string>
    <string name="qnecesitas_nat_cu">qnecesitas.nat.cu</string>
    <string name="https_www_facebook_com_qnecesitas_paginaprincipal">https://www.facebook.com/qnecesitas.paginaprincipal</string>
    <string name="misi_n">Misión:</string>
    <string name="agregar_producto">Agregar producto</string>
    <string name="nombre">Nombre</string>
    <string name="c_digo">Código</string>
    <string name="marca">Marca</string>
    <string name="cantidad">Cantidad</string>
    <string name="d_ficit">Déficit</string>
    <string name="precio_de_compra">Precio de compra</string>
    <string name="precio_de_venta">Precio de venta</string>
    <string name="descripci_n">Descripción</string>
    <string name="cancelar">CANCELAR</string>
    <string name="aceptar">ACEPTAR</string>
    <string name="unidades">unidades</string>
    <string name="cup">cup</string>
    <string name="cancelar1">Cancelar</string>
    <string name="est_seguro_de_cancelar_estos_datos">¿Está seguro de cancelar estos datos?</string>
    <string name="este_campo_no_debe_de_estar_vac_o">Este campo no debe de estar vacío</string>
    <string name="no_definido">No definido</string>
    <string name="_0">0</string>
    <string name="aceptar1">Aceptar</string>
    <string name="est_s_seguro_de_guardar_estos_datos">¿Estás seguro de guardar estos datos?</string>
    <string name="a_adir">Añadir</string>
    <string name="eliminar">Eliminar</string>
    <string name="error_al_obtener_la_imagen">Error al obtener la imagen</string>
    <string name="elemento_repetido">Elemento repetido</string>
    <string name="no_pueden_existir_dos_productos_con_el_mismo_c_digo">No pueden existir dos productos con el mismo código</string>
    <string name="operaci_n_realizada_con_xito">Operación realizada con éxito</string>
    <string name="actualizar">Actualizar</string>
    <string name="est_s_seguro_de_actualizar_estos_datos">¿Estás seguro de actualizar estos datos?</string>
    <string name="configuraci_n">Configuración</string>
    <string name="cambiar_contrase_a">Cambiar contraseña</string>
    <string name="contrase_a_actual">Contraseña actual</string>
    <string name="contrase_a_nueva">Contraseña nueva</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="opciones_de_base_de_datos">Opciones de Base de Datos</string>
    <string name="exportar_base_de_datos">Exportar Base de Datos</string>
    <string name="importar_base_de_datos">Importar Base de Datos</string>
    <string name="base_de_datos_exportada_con_xito">Base de datos exportada con éxito</string>
    <string name="error_al_exportar_la_base_de_datos">Error al exportar la base de datos</string>
    <string name="error_al_importar_la_base_de_datos">Error al importar la base de datos</string>
    <string name="no_coinciden_la_contrase_a_a_confirmar_y_la_nueva">No coinciden la contraseña a confirmar y la nueva</string>
    <string name="importado_con_xito">Importado con éxito</string>
    <string name="Debe_reiniciar">Debe cerrar completamente la aplicación y luego abrirla para ver los cambios y evitar errores</string>
    <string name="tiendas">Tiendas</string>
    <string name="cargando">Cargando</string>
    <string name="nombre1">Nombre:</string>
    <string name="eliminar1">Eliminar</string>
    <string name="a_adir_tienda">Añadir tienda</string>
    <string name="nombre_de_tienda">Nombre de tienda</string>
    <string name="editar_tienda">Editar tienda</string>
    <string name="est_seguro_de_eliminar_esta_tienda">¿Está seguro de eliminar esta tienda,con todas sus carpetas y todos sus productos?</string>
    <string name="buscar_producto">Buscar producto</string>
    <string name="cantidad1">Cantidad:</string>
    <string name="tienda">Tienda:</string>
    <string name="entrada">ENTRADA</string>
    <string name="a_adir_entrada">Añadir entrada</string>
    <string name="restar">Restar</string>
    <string name="sumar">Sumar</string>
    <string name="buscar_tienda">Buscar tienda</string>
    <string name="productos">Productos</string>
    <string name="marca1">Marca:</string>
    <string name="precio_de_venta1">Precio de venta:</string>
    <string name="men_de_opciones">Menú de opciones</string>
    <string name="entrada1">Entrada</string>
    <string name="venta">Venta</string>
    <string name="editar">Editar</string>
    <string name="detalles">Detalles</string>
    <string name="a_adir_producto">Añadir Producto</string>
    <string name="salida">Salida</string>
    <string name="detalles_del_producto">Detalles del producto</string>
    <string name="c_digo1">Código:</string>
    <string name="tienda1">Tienda:</string>
    <string name="d_ficit1">Déficit:</string>
    <string name="precio_de_compra1">Precio de compra:</string>
    <string name="descripci_n1">Descripción:</string>
    <string name="no_existen_tiendas_agregadas_a_n">No existen tiendas agregadas aún</string>
    <string name="no_hay_tiendas_a_adidas">No hay tiendas añadidas</string>
    <string name="carpeta">Carpeta:</string>
    <string name="a_adir_carpeta">Añadir carpeta</string>
    <string name="nombre_de_carpeta">Nombre de carpeta</string>
    <string name="editar_carpeta">Editar carpeta</string>
    <string name="est_seguro_que_desea_eliminar_esta_carpeta_y_todos_sus_productos">¿Está seguro que desea eliminar esta carpeta y todos sus productos?</string>
    <string name="no_hay_productos_a_adidos">No hay productos añadidos</string>
    <string name="no_hay_productos_en_esta_carpeta">No hay productos en esta carpeta</string>
    <string name="no_hay_carpetas_en_esta_tienda">No hay carpetas en esta tienda</string>
</resources>