<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityNewProduct">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/AppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:theme="@style/ToolbarIcons"
            app:title="@string/agregar_producto"
            app:titleTextColor="@color/white">

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/AppBar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp"
                    android:backgroundTint="?attr/colorOnPrimary">

                    <!--image-->
                    <ImageView
                        android:id="@+id/image"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:importantForAccessibility="no"
                        android:src="@drawable/baseline_image_search_24"/>


                </androidx.cardview.widget.CardView>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/TIL_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="20dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/TIET_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/c_digo"
                        android:inputType="text"
                        android:maxLength="100">

                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TIL_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="40dp">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TIET_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombre"
                    android:inputType="text"
                    android:maxLength="50"
                    android:minWidth="400dp">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TIL_brand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="12dp">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TIET_brand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/marca"
                    android:inputType="text"
                    android:maxLength="50"
                    android:minWidth="250dp">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TIL_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="12dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TIET_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/cantidad"
                    android:inputType="number"
                    android:maxLength="20"
                    android:minWidth="250dp">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unidades"
                    android:layout_marginStart="20dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="8dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>




                </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TIL_deficit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="12dp">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TIET_deficit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/d_ficit"
                    android:inputType="number"
                    android:maxLength="20"
                    android:minWidth="250dp">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unidades"
                android:layout_marginStart="20dp"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="8dp"
                android:textStyle="bold"
                android:textColor="@color/black"/>


        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TIL_buyPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="12dp">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TIET_buyPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/precio_de_compra"
                    android:inputType="number"
                    android:maxLength="20"
                    android:minWidth="200dp">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cup"
                android:layout_marginStart="20dp"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="8dp"
                android:textStyle="bold"
                android:textColor="@color/black"/>


        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TIL_salePrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="12dp">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TIET_salePrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/precio_de_venta"
                    android:inputType="number"
                    android:maxLength="20"
                    android:minWidth="200dp">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cup"
                android:layout_marginStart="20dp"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="8dp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

        </LinearLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TIL_descr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="15dp">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TIET_descr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/descripci_n"
                    android:inputType="text"
                    android:maxLength="250">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>



        </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <!--Button Delete-->
        <Button
            android:id="@+id/btn_cancel"
            style="@style/transparent_button_outlined"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10sp"
            android:text="@string/cancelar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <!--Button Accept-->
        <Button
            android:id="@+id/btn_acept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10sp"
            android:text="@string/aceptar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>